--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </section>
 
             <section class="cart">
-                <h2>Shopping Cart</h2>
+                <h2>Shopping Carts</h2>
                 <div id="cartItems"></div>
                 <div id="cartTotal">Total: $0.00</div>
             </section>
